--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "peneOSWebsite",
+  "name": "peneoswebsite",
   "version": "1.0.0",
   "description": "my cock is gigantic",
   "main": "src/app.ts",
