--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
   "main": "src/app.ts",
   "repository": "https://github.com/sinjs/peneOSWebsite.git",
   "author": "sin",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
